Remove duplicate styling

--- a/about.html
+++ b/about.html
@@ -4,82 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="about.css" />
     <title aria-label="title">Graphic Designer's Summit Website</title>
   </head>
   <body>
     <!-- Navigation Section  -->
-      <header class="home-container">
-        <nav class="top-header">
-          <ul class="top-nav">
-            <li class="top-item">
-              <a href="https://web.facebook.com/onyeka2k" class="nav-link">
-                <img src="img/facebook-icon.png" alt="facebook-icon"/>
-              </a>
-            </li>
-            <li class="top-item">
-              <a href="https://twitter.com/donmark2k" class="nav-link">
-                <img src="img/twitter-icon.png" alt=" twitter icon"/>
-              </a>
-            </li>
-            <li class="top-item">
-              <a href="#" class="nav-link">English</a>
-            </li>
-            <li class="top-item">
-              <a href="#" class="nav-link">login</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="navbar">
-          <a href="index.html" class="nav-branding">
-            <img src="img/header-logo.png" alt="logo image"/>
-          </a>
-          <ul class="nav-menu nav-menu1">
-            <li class="nav-item home-ref">
-              <a href="index.html" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Program</a>
-            </li>
-            <li class="nav-item">
-              <a href="" class="nav-link">Join</a>
-            </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Sponsor</a>
-            </li>
-            <li class="nav-item">
-              <a href="#news" class="nav-link">News</a>
-            </li>
-            <li class="nav-item">
-              <a href="#campaign" class="nav-link">
-                <span> GD Campaign</span>
-              </a>
-            </li>
-          </ul>
-          <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
+    <header class="home-container">
+      <nav class="top-header hide-class">
+        <ul class="top-nav">
+          <li class="top-item">
+            <a href="https://web.facebook.com/onyeka2k" class="nav-link">
+              <img src="img/facebook-icon.png" alt="facebook-icon" />
+            </a>
+          </li>
+          <li class="top-item">
+            <a href="https://twitter.com/donmark2k" class="nav-link">
+              <img src="img/twitter-icon.png" alt=" twitter icon" />
+            </a>
+          </li>
+          <li class="top-item">
+            <a href="#" class="nav-link">English</a>
+          </li>
+          <li class="top-item">
+            <a href="#" class="nav-link">login</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="navbar">
+        <a href="index.html" class="nav-branding hide-class">
+          <img src="img/header-logo.png" alt="logo image" />
+        </a>
+        <ul class="nav-menu nav-menu1 hide-class">
+          <li class="nav-item home-ref">
+            <a href="index.html" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Program</a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="nav-link">Join</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Sponsor</a>
+          </li>
+          <li class="nav-item">
+            <a href="#news" class="nav-link">News</a>
+          </li>
+          <li class="nav-item">
+            <a href="#campaign" class="nav-link">
+              <span> GD Campaign</span>
+            </a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
+      </div>
       <section class="first-container" aria-label="who we are">
-        <section class="introduction about" aria-label="Our mission">
-          <h3 class="hello-share">"Hello! Sharing world"</h3>
-          <h1>GRAPHIC DESIGNERS GLOBAL SUMMIT 2023</h1>
-          <p class="short-intro">
+        <section class="introduction" aria-label="Our mission">
+          <h3>"Hello! Sharing world"</h3>
+          <h1>GRAPHIC DESIGNERS <br />GLOBAL SUMMIT 2023</h1>
+          <p class="short-intro hide-class">
             The Global Summit brings together the community of experts,
-            academics, activists who comprise the Graphic designs <br />
-            affiliate network in a different country every two years. <br />This
-            year, we hope to expand our invitation list including organizations
-            and individuals who want to work with us on shared <br />projects
-            that advance the cause of the graphics, free culture and open
-            knowledge. <br />So if you are active and engaged in the worlds of
-            open control and knowledge-free software advocates, Wikipedia, Open
-            Knowledge, galleries, libraries, museums, archives, governments and
+            academics, activists who comprise the Graphic designs affiliate
+            network in a different country every two years. This year, we hope
+            to expand our invitation list including organizations and
+            individuals who want to work with us on shared projects that advance
+            the cause of the graphics, free culture and open knowledge. So if
+            you are active and engaged in the worlds of open control and
+            knowledge-free software advocates, Wikipedia, Open Knowledge,
+            galleries, libraries, museums, archives, governments and
             foundations, lawyers, and activists-we hope, you will consider
             joining us to build a stronger, more vibrants commons together.
           </p>
-          <p class="short-intro-mobile">
+          <p class="short-intro mobile">
             The Global Summit brings together the community of experts,
             academics, activists who comprise the Graphic designs affiliate
             network in a different country every two years. This year, we hope
@@ -87,14 +87,12 @@
             individuals
           </p>
           <p class="contact-us">
-            Please contact us per Email for any further questions about GD
+            Please contact us through email for any further questions about GD
             Global Summit 2023!
           </p>
           <p class="via-mail">
             <a href="mailto:chukwuemekavp@gmail.com">gdsummit@gdlagos.org</a>
-            <span>&gt;</span>
           </p>
-          <span class="line-bar"></span>
         </section>
       </section>
     </header>
@@ -102,17 +100,18 @@
     <section
       class="summit"
       id="campaign"
-      aria-label="competition winners section">
+      aria-label="competition winners section"
+    >
       <h2>Graphic Designers Global Summit 2023 Logo</h2>
       <span class="line-bar"></span>
-      <p class="competition-date">
+      <p class="hide-class">
         The logo of GD global Summit 2023 was decided through competition from
         8th June to 8th July after online public voting and Selection
         Committee's judging process, the logo from Daniel Rita won the prize.
         After consultation with Mr. Gabriel, we optimized the prize winning logo
         for this year's summit as following:
       </p>
-      <p class="competition-date-mobile">
+      <p class="mobile">
         The logo of GD global Summit 2023 was decided through competition from
         8th June to 8th July
       </p>
@@ -120,59 +119,49 @@
     </section>
     <!-- past Summit Section -->
     <section class="past-summit" id="news" aria-label="past summit  section">
-      <h2>See the past GD Global Summits</h2>
+      <h2 class="past-summit-h2">See the past GD Global Summits</h2>
       <span class="line-bar"></span>
       <p>
-        Take a look at the last two GD Global Summits which took place in Buenes
-        Aires and in Warsaw.
+        Take a look at the last two GD Global Summits which took place in
+        Nairobi and in Warsaw.
       </p>
       <div class="past-images">
-        <div class="first-image">
-          <h2>2022</h2>
-          <p>GD Global Summit in Buenois Aires</p>
-        </div>
-        <div class="second-image">
-          <h2>2021</h2>
-          <p>GD Global Summit in Warsaw</p>
-        </div>
+        <a href="#"> <img src="img/event1.png" alt="event1-img" /> </a>
+
+        <a href="#"> <img src="img/event2.png" alt="event2-img" /> </a>
       </div>
     </section>
-    <section class="about-partner" aria-label="partners  section">
+    <section class="partner" aria-label="partners  section" id="partners">
       <h2>Partner</h2>
       <span class="line-bar"></span>
       <ul class="partner-list">
-        <li class="">
-          <a href="#" class="partner-link mozilla">mozilla</a>
+        <li>
+          <a href="#" class="partner-link mozilla">WAMMAKO</a>
         </li>
-        <li class="">
-          <a href="#" class="partner-link google">Google</a>
+        <li>
+          <a href="#" class="partner-link mozilla">MTN</a>
         </li>
-        <li class="">
-          <a href="#" class="partner-link navier">NAVER</a>
+        <li>
+          <a href="#" class="partner-link mozilla">STARTIME</a>
         </li>
-        <li class="">
-          <a href="#" class="partner-link daumkakao">daumkakao</a>
+        <li>
+          <a href="#" class="partner-link mozilla">NIVIA</a>
         </li>
-        <li class="">
-          <a href="#" class="partner-link airbnb">
-            <img class="airbnb-logo" src="img/airbnb.png" alt=" airbnb logo" />
-          </a>
+        <li>
+          <a href="#" class="partner-link mozilla">STARCOM</a>
         </li>
       </ul>
     </section>
-    <footer class="about" aria-label="footer  section">
-      <div class="about-footer">
-        <div class="logo2">
-          <img src="img/footer-logo.png" alt="footer logo" />
-        </div>
-        <div class="copyright-details">
-          <h4>2023 Graphic Designs Nigeria. Some Rights Reserved.</h4>
-          <p class="footer-note">
-            Graphics is the soul of a website and permanent branding of a
-            company. We brand products that communicate tailored messages to the
-            targeted audience
-          </p>
-        </div>
+    <footer aria-label="footer  section">
+      <div class="logo2">
+        <img src="img/footer-logo.png" alt="footer logo" />
+      </div>
+      <div class="copyright-details">
+        <p>2023 Graphic Designs Nigeria. Some Rights Reserved.</p>
+        <p class="hide-class">
+          Unless otherwise specified, all content on the website is licensed
+          under a Graphic Designs Nigeria.
+        </p>
       </div>
     </footer>
     <script src="main.js"></script>
